--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@
 # SITE SETTINGS
 #
 # title appears in the header
-title: workshop-template-b
+title: "Cross-View Geo-Localization: Current Challenges and Future Frontiers with GenAI"
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/
 # some options: code-slash file-code gear tools lightblub book bookmark-star
-title-icon: code-slash
+title-icon: lightblub
 # description, keywords, and image for meta tags
 # these do not visibility appear on the pages, but used for SEO
 description: "Create a workshop website quick and easy!"
@@ -24,16 +24,16 @@ keywords: "workshops, websites, gh-pages, jekyll"
 # use a relative path to image in this repository or full URL
 featured-image: "/images/uidaho-workshop.jpg"
 # add search box to footer? true/false
-search: true
+search: false
 
 # author settings for cc-by, appears in the footer and credits
-author: evan will
+author: Xiaohan Zhang
 # your github username for link [optional]
-github_username: evanwill
+github_username: zxh009123
 # year or date published
-pub_year: 2021
+pub_year: 2024
 # location of code, the full url to your github repository
-source-code: https://github.com/evanwill/workshop-template-b
+source-code: https://github.com/zxh009123/WACV25_CVGL_Tutorial
 
 ##########
 # URL VARIABLES [optional!!]
