--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: "Cross-View Geo-Localization: Current Challenges and Future Frontiers wit
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/
 # some options: code-slash file-code gear tools lightblub book bookmark-star
-title-icon: lightblub
+# title-icon: lightblub
 # description, keywords, and image for meta tags
 # these do not visibility appear on the pages, but used for SEO
 description: "Create a workshop website quick and easy!"
