--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@
 # SITE SETTINGS
 #
 # title appears in the header
-title: "Cross-View Geo-Localization: Current Challenges and Future Frontiers with GenAI"
+# title: "Cross-View Geo-Localization: Current Challenges and Future Frontiers with GenAI"
+title: ""
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/
